--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup/Login</title>
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="css/form.css">
 
 </head>
 
@@ -47,8 +47,9 @@
             </div>
         </div>
     </div>
-    <script src="/js/login.js"></script>
+    <script src="js/login.js"></script>
 </body>
 
 </html>
+
 
