--- a/login.html
+++ b/login.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Login / Sign up</title>
-    <script defer src="../js/login.js"></script>
-    <link rel="stylesheet" href="../css/login1.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup/Login</title>
+    <link rel="stylesheet" href="css/form.css">
 
 </head>
-<body>
-<div class="form-structor">
-    <!-- SIGN UP FORM -->
-    <div class="signup">
-        <h2 class="form-title" id="signup"><span>or</span> Sign up</h2>
-        <form id="signupForm">
-            <div class="form-holder">
-                <input type="text" class="input" id="signupName" placeholder="Full Name" required />
-                <input type="email" class="input" id="signupEmail" placeholder="Email Address" required />
-                <input type="password" class="input" id="signupPassword" placeholder="Password" required minlength="6" />
-                <input type="password" class="input" id="signupConfirm" placeholder="Confirm Password" required minlength="6" />
-            </div>
-            <button type="submit" class="submit-btn">Sign up</button>
-        </form>
-    </div>
 
-    <!-- LOGIN FORM -->
-    <div class="login slide-up">
-        <div class="center">
-            <h2 class="form-title" id="login"><span>or</span> Log in</h2>
-            <form id="loginForm">
+<body>
+    <div id="toast" class="toast"></div>
+    <div class="form-structor">
+        <!-- ===== FORM ĐĂNG KÝ ===== -->
+        <div class="signup">
+            <h2 class="form-title">Đăng ký</h2>
+            <div class="form-holder">
+                <input type="text" class="input" placeholder="Họ và tên" />
+                <input type="email" class="input" placeholder="Email" />
+                <input type="password" class="input" id="signupPassword" placeholder="Mật khẩu" />
+                <input type="password" class="input" id="confirmPassword" placeholder="Xác nhận mật khẩu" />
+            </div>
+            <button class="submit-btn">Đăng ký</button>
+
+            <p class="switch-text">
+                Đã có tài khoản?
+                <span id="login" class="switch-btn">Đăng nhập</span>
+            </p>
+        </div>
+
+        <!-- ===== FORM ĐĂNG NHẬP ===== -->
+        <div class="login slide-up">
+            <div class="center">
+                <h2 class="form-title">Đăng nhập</h2>
                 <div class="form-holder">
-                    <input type="email" class="input" id="loginEmail" placeholder="Email Address" required />
-                    <input type="password" class="input" id="loginPassword" placeholder="Password" required />
+                    <input type="email" class="input" placeholder="Email" />
+                    <input type="password" class="input" id="loginPassword" placeholder="Mật khẩu" />
                 </div>
-                <button type="submit" class="submit-btn">Log in</button>
-            </form>
+                <a href="forgot.html" class="forgot-password">Quên mật khẩu?</a>
+                <button class="submit-btn">Đăng nhập</button>
+
+                <p class="switch-text">
+                    Chưa có tài khoản?
+                    <span id="signup" class="switch-btn">Đăng ký</span>
+                </p>
+            </div>
         </div>
     </div>
-</div>
+    <script src="js/login.js"></script>
 </body>
+
 </html>
