add newPass and changePass

--- a/newPass.html
+++ b/newPass.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div id="toast" class="toast"></div>
 
     <div class="form-structor">
+        <!-- ===== FORM MẬT KHẨU MỚI ===== -->
         <div class="newPass">
             <h2 class="form-title">🔒 Mật khẩu mới</h2>
             <div class="form-holder">
