--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Noble Loft Theory — Nội thất</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/trangchu.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="header"></div>
@@ -315,7 +315,7 @@
     </button>
     <div id="footer"></div>
   
-  <script src="js/trangchu.js"></script>
+  <script src="js/main.js"></script>
   <script>
     // Tải header và footer tự động
     async function loadHTML(id, file) {
@@ -330,3 +330,4 @@
 
 </body>
 </html>
+
