--- a/changePass.html
+++ b/changePass.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Change Password</title>
+    <title>Thay đổi mật khẩu</title>
     <link rel="stylesheet" href="css/changePass.css" />
 </head>
 
@@ -15,16 +15,15 @@
             <h2 class="form-title">Đổi mật khẩu</h2>
 
             <div class="form-holder">
-                <input type="password" id="oldPassword" class="input-cp" placeholder="Mật khẩu hiện tại" />
-                <input type="password" id="newPassword" class="input-cp" placeholder="Mật khẩu mới" />
-                <input type="password" id="confirmPassword" class="input-cp" placeholder="Xác nhận mật khẩu mới" />
+                <input type="password" id="oldPassword" class="input-cp" placeholder="Mật khẩu hiện tại" required />
+                <input type="password" id="newPassword" class="input-cp" placeholder="Mật khẩu mới" required />
+                <input type="password" id="confirmPassword" class="input-cp" placeholder="Xác nhận mật khẩu mới"
+                    required />
             </div>
 
             <button id="btnChange" class="submit-btn">Đổi lại mật khẩu</button>
         </div>
     </div>
-
-    <script src="css/changePass.js"></script>
 
 </body>
 
