--- a/newPass.html
+++ b/newPass.html
@@ -2,28 +2,31 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mật khẩu mới</title>
-    <link rel="stylesheet" href="css/newPass.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mật khẩu mới</title>
+  <link rel="stylesheet" href="css/form.css" />
+  <link rel="stylesheet" href="css/contentForm.css" />
 </head>
 
 <body>
+  <div class="form-structor">
+    <div class="content">
+      <h2 class="form-title">Mật khẩu mới</h2>
 
-    <div class="form-structor">
-        <!-- ===== FORM MẬT KHẨU MỚI ===== -->
-        <div class="newPass">
-            <h2 class="form-title">🔒 Mật khẩu mới</h2>
-            <div class="form-holder">
-                <input type="password" id="newPassword" class="input" placeholder="Nhập mật khẩu mới" />
-                <input type="password" id="confirmPassword" class="input" placeholder="Nhập lại mật khẩu mới" />
-            </div>
-            <button class="submit-btn" id="btnAgree">Xác nhận</button>
-            <p class="switch-text">← <a href="login.html" class="switch-btn">Quay lại đăng nhập</a></p>
-        </div>
+      <div class="form-holder">
+        <input type="password" class="input" placeholder="Nhập mật khẩu mới" required />
+        <input type="password" class="input" placeholder="Nhập lại mật khẩu mới" required />
+      </div>
+
+      <a href="login.html" class="submit-btn">Xác nhận</a>
+
+      <p class="switch-text">
+        ← <a href="forgot.html" class="switch-btn">Quay lại đăng nhập</a>
+      </p>
     </div>
+  </div>
 
-    <script src="js/newPass.js"></script>
 </body>
 
 </html>
