--- a/forgot.html
+++ b/forgot.html
@@ -2,27 +2,30 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quên mật khẩu</title>
-    <link rel="stylesheet" href="css/forgot.css">
+    <link rel="stylesheet" href="css/form.css" />
+    <link rel="stylesheet" href="css/contentForm.css" />
 </head>
 
 <body>
     <div class="form-structor">
-        <div class="forgot">
+        <div class="content">
             <h2 class="form-title">Quên mật khẩu</h2>
-            <div class="form-holder">
-                <input type="email" id="emailForgot" class="input" placeholder="Nhập email để khôi phục" />
-            </div>
-            <button class="submit-btn" id="btnForgot">Gửi liên kết đặt lại</button>
 
-            <a href="login.html" class="back-to-login">← Quay lại đăng nhập</a>
-            <p id="forgotMsg" class="msg"></p>
+            <div class="form-holder">
+                <input type="email" id="emailForgot" class="input" placeholder="Nhập email để khôi phục" required />
+            </div>
+
+            <a href="newPass.html" class="submit-btn">Gửi liên kết đặt lại</a>
+
+            <p class="switch-text">
+                ← <a href="login.html" class="switch-btn">Quay lại đăng nhập</a>
+            </p>
         </div>
     </div>
 
-    <script src="js/forgot.js"></script>
 </body>
 
 </html>
