chinh sua account footer voi oder cua account

--- a/account.html
+++ b/account.html
@@ -5,9 +5,10 @@
     <title>Tài khoản của tôi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/account.css">
-    <link rel="stylesheet" href="account-orders.css">
-    <link rel="stylesheet" href="changePass.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/account-orders.css">
+    <link rel="stylesheet" href="css/changePass.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 
 </head>
@@ -34,7 +35,7 @@
             </div>
         </div>
     </div>
-
+</header>
 <div id="header"></div>
 
 
@@ -255,11 +256,73 @@
             </div>
         </div>
 
-
-
     </main>
 </div>
+
+    <!-- FOOTER -->
+
+
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer-columns">
+
+                        <!-- Cột 1: Giới thiệu -->
+                        <div class="footer-col">
+                            <h3>Giới thiệu</h3>
+                            <p>Chào mừng bạn đến với <strong>Noble Loft Theory</strong> — không gian dành cho những ai yêu thích cái đẹp và nghệ thuật trang trí nội thất.</p>
+                            <p>Chúng tôi mang đến các sản phẩm decor trang trí nhà với phong cách hiện đại, tối giản nhưng vẫn giữ được sự tinh tế trong từng chi tiết.</p>
+                        </div>
+
+                        <!-- Cột 2: Liên kết -->
+                        <div class="footer-col">
+                            <h3>Liên kết</h3>
+                            <ul>
+                                <li><a href="">Chính sách đổi trả hoàn hàng</a></li>
+                                <li><a href="">Chính sách bảo mật mật khẩu</a></li>
+                                <li><a href="">Hướng dẫn mua hàng, sản phẩm</a></li>
+                                <li><a href="">Chính sách kiểm hàng hóa vận chuyển</a></li>
+                                <li><a href="">Chính sách giao hàng tận nơi</a></li>
+                                <li><a href="">Hướng dẫn thanh toán đơn hàng</a></li>
+                            </ul>
+                        </div>
+
+                        <!-- Cột 3: Thông tin liên hệ -->
+                        <div class="footer-col">
+                            <h3>Thông tin liên hệ</h3>
+                            <p><i class="fa fa-map-marker"></i> Khu phố 6, P.Linh Trung, TP.Thủ Đức</p>
+                            <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
+                            <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
+                            <p><i class="fa fa-envelope"></i> <a href="mailto:NLT@noblelofttheory.com">NLT@noblelofttheory.com</a></p>
+                        </div>
+
+                        <!-- Cột 4: Fanpage -->
+                        <div class="footer-col">
+                            <h3>Fanpage</h3>
+                            <p>Liên hệ ngay trang chủ của shop Noble Loft Theory.</p>
+                            <p>Nếu bạn đang có thắc mắc gì ở sản phẩm.</p>
+                            <p>Fanpage, Youtube và Instagram.</p>
+
+                            <div class="social-box">
+                                <div class="social-icons">
+                                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                    <a href=""><i class="fa-brands fa-youtube"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-bottom">
+                    <p>Copyright © 2025 NLT Noble Loft Theory. Powered by NLT</p>
+                </div>
+            </footer>
+
+
+
+
 <script src="js/account.js"></script>
+
 
 </body>
 </html>
