--- a/pay.html
+++ b/pay.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/pay.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -180,7 +181,7 @@
     <header class="header">
         <div class="header-top">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo">
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
                 <span>Noble Loft Theory</span>
             </div>
             <div class="search-box">
@@ -188,14 +189,14 @@
                 <input type="text" placeholder="Tìm kiếm">
             </div>
             <div class="header-right">
-                <a href="#">Tra cứu đơn hàng</a>
+                <a href="tracking.html">Tra cứu đơn hàng</a>
                 <a href="gioithieu.html">Giới thiệu</a>
-                <a href="#">Liên hệ</a>
+                <a href="contact.html">Liên hệ</a>
                 <div class="icons">
                     <a href="cart.html" class="circle">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </a>
-                    <a href="user.html" class="circle">
+                    <a href="login.html" class="circle">
                         <i class="fa-solid fa-user"></i>
                     </a>
                 </div>
@@ -203,7 +204,7 @@
         </div>
 
         <nav class="menu">
-            <a href="index.html" class="active">Trang chủ</a>
+            <a href="home.html" class="active">Trang chủ</a>
             <div class="dropdown">
                 <a href="living.html">Phòng khách <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-content">
@@ -263,7 +264,7 @@
 
     <!-- ===== BREADCRUMB / TIẾN TRÌNH ===== -->
     <div class="breadcrumb">
-        <a href="index.html">Trang chủ</a> &#47;
+        <a href="home.html">Trang chủ</a> &#47;
         <a href="cart.html">Giỏ hàng</a> &#47;
         <span class="current">Thông tin đặt hàng</span>
     </div>
