--- a/forgot.html
+++ b/forgot.html
@@ -5,11 +5,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quên mật khẩu</title>
-    <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/contentForm.css" />
 </head>
 
 <body>
+    <style>
+        @import url("https://fonts.googleapis.com/css?family=Fira+Sans");
+
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            background-color: #E1E8EE;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+            font-size: 14px;
+        }
+
+        .form-structor {
+            background-color: #222;
+            border-radius: 15px;
+            height: 600px;
+            width: 400px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .form-structor::after {
+            content: '';
+            opacity: .8;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: 500px;
+            background: url("https://i.postimg.cc/ncBkxWWJ/bgr-login.jpg") no-repeat left bottom / 500px;
+        }
+
+        .switch-text {
+            text-align: center;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        .switch-text .switch-btn {
+            margin-top: 10px;
+            color: #74512D;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: inline-block;
+        }
+
+        .switch-text .switch-btn:hover {
+            color: #A79277;
+            text-decoration: underline;
+        }
+    </style>
+
     <div class="form-structor">
         <div class="content">
             <h2 class="form-title">Quên mật khẩu</h2>
@@ -21,7 +79,7 @@
             <a href="newPass.html" class="submit-btn">Gửi liên kết đặt lại</a>
 
             <p class="switch-text">
-                ← <a href="login.html" class="switch-btn">Quay lại đăng nhập</a>
+                <a href="login.html" class="switch-btn">&larr; Quay lại đăng nhập</a>
             </p>
         </div>
     </div>
