--- a/living.html
+++ b/living.html
@@ -18,90 +18,57 @@
     <header class="header">
         <div class="header-top">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo">
-                <span>Noble Loft Theory</span>
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+                <span><a href="home.html">Noble Loft Theory</a></span>
             </div>
             <div class="search-box">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Tìm kiếm">
             </div>
             <div class="header-right">
-                <a href="#">Tra cứu đơn hàng</a>
+                <a href="tracking.html">Tra cứu đơn hàng</a>
                 <a href="gioithieu.html">Giới thiệu</a>
-                <a href="#">Liên hệ</a>
+                <a href="contact.html">Liên hệ</a>
                 <div class="icons">
-                    <a href="cart.html" class="circle">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </a>
-                    <a href="user.html" class="circle">
-                        <i class="fa-solid fa-user"></i>
-                    </a>
+                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
                 </div>
             </div>
         </div>
 
         <nav class="menu">
-            <a href="index.html" class="active">Trang chủ</a>
+            <a href="home.html" class="">Trang chủ</a>
+            <a href="living.html" class="active">Phòng khách</a>
+            <a href="kitchen.html" class="">Phòng bếp</a>
+            <a href="bedroom.html" class="">Phòng ngủ</a>
+            <a href="office.html" class="">Phòng làm việc</a>
+            <a href="balcony.html" class="">Ban Công</a>
+
             <div class="dropdown">
-                <a href="living.html">Phòng khách <i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#">Decor <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-content">
-                    <a href="#">Sofa</a>
-                    <a href="#">Bàn trà</a>
-                    <a href="#">Kệ tivi</a>
-                    <a href="#">Đèn trang trí</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="kitchen.html">Phòng Bếp <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Bàn ăn</a>
-                    <a href="#">Ghế ăn</a>
-                    <a href="#">Tủ bếp</a>
-                    <a href="#">Đèn bàn</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="bedroom.html">Phòng Ngủ <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Giường ngủ</a>
-                    <a href="#">Tủ quần áo</a>
-                    <a href="#">Bàn trang điểm</a>
-                    <a href="#">Đèn ngủ</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="office.html">Phòng Làm Việc <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#"> Ghế </a>
-                    <a href="#"> Bàn làm việc </a>
-                    <a href="#"> Tủ sách </a>
-                    <a href="#"> Kệ sách </a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="balcony.html">Ban Công <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Ghế ngoài trời</a>
-                    <a href="#">Bàn trà ngoài trời</a>
-                    <a href="#">Chậu cây</a>
-                    <a href="#">Đèn trang trí</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Tranh treo tường</a>
-                    <a href="#">Gương trang trí</a>
-                    <a href="#">Đồ decor bàn</a>
-                    <a href="#">Thảm trải sàn</a>
+                    <a href="#">Cây</a>
+                    <a href="#">Hoa</a>
+                    <a href="#">Đèn</a>
+                    <a href="#">Tượng & Phụ kiện</a>
+                    <a href="#">Đồng hồ</a>
+                    <a href="#">Tranh</a>
+                    <a href="#">Gương</a>
+                    <a href="#">Nến & Tinh dầu</a>
+                    <a href="#">Bình & Lọ hoa</a>
+                    <a href="#">Chăn & Gối</a>
+                    <a href="#">Kệ & Giá đỡ mini</a>
+                    <a href="#">Bàn decor</a>
+                    <a href="#">Ghế decor</a>
                 </div>
             </div>
         </nav>
     </header>
 
+
     <!-- === BREADCRUMB (ĐƯỜNG DẪN TRANG) === -->
     <nav class="breadcrumb">
-        <a href="index.html">Trang chủ</a> &#47;
+        <a href="home.html">Trang chủ</a> &#47;
         <span class="current">Phòng khách</span>
     </nav>
 
@@ -471,12 +438,24 @@
                         <ul>
 
                             <div> </div>
-                            <li><a href="#"> Chính sách đổi trả hoàn hàng</a></li>
-                            <li><a href="#"> Chính sách bảo mật mật khẩu</a></li>
-                            <li><a href="#"> Hướng dẫn mua hàng, sản phẩm</a></li>
-                            <li><a href="#"> Chính sách kiểm hàng hóa vận chuyển</a></li>
-                            <li><a href="#"> Chính sách giao hàng tận nơi</a></li>
-                            <li><a href="#"> Hướng dẫn thanh toán đơn hàng</a></li>
+                            <li>
+                                <p href="#"> Chính sách đổi trả hoàn hàng</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách bảo mật mật khẩu</p>
+                            </li>
+                            <li>
+                                <p href="#"> Hướng dẫn mua hàng, sản phẩm</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách kiểm hàng hóa vận chuyển</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách giao hàng tận nơi</p>
+                            </li>
+                            <li>
+                                <p href="#"> Hướng dẫn thanh toán đơn hàng</p>
+                            </li>
 
                         </ul>
                     </ul>
@@ -522,9 +501,8 @@
         </div>
     </footer>
 
-
-
     <script src="js/living.js"></script>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
