--- a/login.html
+++ b/login.html
@@ -34,10 +34,16 @@
         }
 
         .form-structor::after {
-            content: "";
-            opacity: 0.8;
+            content: '';
+            opacity: .8;
             position: absolute;
-            inset: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-repeat: no-repeat;
+            background-position: left bottom;
+            background-size: 500px;
             background: url("https://i.postimg.cc/ncBkxWWJ/bgr-login.jpg") no-repeat left bottom / 500px;
         }
 
@@ -92,7 +98,7 @@
                 </div>
 
                 <a href="forgot.html" class="forgot-password">Quên mật khẩu?</a>
-                <a href="index.html" class="submit-btn">Đăng nhập</a>
+                <a href="home.html" class="submit-btn">Đăng nhập</a>
 
                 <p class="switch-text">Chưa có tài khoản?
                     <span id="signup" class="switch-btn">Đăng ký</span>
