--- a/office.html
+++ b/office.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Office</title>
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/living.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -17,89 +18,56 @@
     <header class="header">
         <div class="header-top">
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo">
-                <span>Noble Loft Theory</span>
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+                <span><a href="home.html">Noble Loft Theory</a></span>
             </div>
             <div class="search-box">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Tìm kiếm">
             </div>
             <div class="header-right">
-                <a href="#">Tra cứu đơn hàng</a>
+                <a href="tracking.html">Tra cứu đơn hàng</a>
                 <a href="gioithieu.html">Giới thiệu</a>
-                <a href="#">Liên hệ</a>
+                <a href="contact.html">Liên hệ</a>
                 <div class="icons">
-                    <a href="cart.html" class="circle">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </a>
-                    <a href="user.html" class="circle">
-                        <i class="fa-solid fa-user"></i>
-                    </a>
+                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
                 </div>
             </div>
         </div>
 
         <nav class="menu">
-            <a href="index.html" class="active">Trang chủ</a>
-            <div class="dropdown">
-                <a href="living.html">Phòng khách <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Sofa</a>
-                    <a href="#">Bàn trà</a>
-                    <a href="#">Kệ tivi</a>
-                    <a href="#">Đèn trang trí</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="kitchen.html">Phòng Bếp <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Bàn ăn</a>
-                    <a href="#">Ghế ăn</a>
-                    <a href="#">Tủ bếp</a>
-                    <a href="#">Đèn bàn</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="bedroom.html">Phòng Ngủ <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Giường ngủ</a>
-                    <a href="#">Tủ quần áo</a>
-                    <a href="#">Bàn trang điểm</a>
-                    <a href="#">Đèn ngủ</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="office.html">Phòng Làm Việc <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#"> Ghế </a>
-                    <a href="#"> Bàn làm việc </a>
-                    <a href="#"> Tủ sách </a>
-                    <a href="#"> Kệ sách </a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="balcony.html">Ban Công <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Ghế ngoài trời</a>
-                    <a href="#">Bàn trà ngoài trời</a>
-                    <a href="#">Chậu cây</a>
-                    <a href="#">Đèn trang trí</a>
-                </div>
-            </div>
+            <a href="home.html" class="menu-item">Trang chủ</a>
+            <a href="living.html" class="menu-item">Phòng khách</a>
+            <a href="kitchen.html" class="menu-item">Phòng bếp</a>
+            <a href="bedroom.html" class="menu-item">Phòng ngủ</a>
+            <a href="office.html" class="menu-item active">Phòng làm việc</a>
+            <a href="balcony.html" class="menu-item">Ban Công</a>
+
             <div class="dropdown">
                 <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
                 <div class="dropdown-content">
-                    <a href="#">Tranh treo tường</a>
-                    <a href="#">Gương trang trí</a>
-                    <a href="#">Đồ decor bàn</a>
-                    <a href="#">Thảm trải sàn</a>
+                    <a href="#">Cây</a>
+                    <a href="#">Hoa</a>
+                    <a href="#">Đèn</a>
+                    <a href="#">Tượng & Phụ kiện</a>
+                    <a href="#">Đồng hồ</a>
+                    <a href="#">Tranh</a>
+                    <a href="#">Gương</a>
+                    <a href="#">Nến & Tinh dầu</a>
+                    <a href="#">Bình & Lọ hoa</a>
+                    <a href="#">Chăn & Gối</a>
+                    <a href="#">Kệ & Giá đỡ mini</a>
+                    <a href="#">Bàn decor</a>
+                    <a href="#">Ghế decor</a>
                 </div>
             </div>
         </nav>
     </header>
+
     <!-- === BREADCRUMB (ĐƯỜNG DẪN TRANG) === -->
     <nav class="breadcrumb">
-        <a href="index.html">Trang chủ</a> &#47;
+        <a href="home.html">Trang chủ</a> &#47;
         <span class="current">Phòng làm việc</span>
     </nav>
 
@@ -370,11 +338,92 @@
     </button>
 
     <!-- === FOOTER === -->
-    <div id="footer"></div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-columns">
+                <!-- Cột 1: Giới thiệu -->
+                <div class="footer-col">
+                    <h3>Giới thiệu</h3>
+                    <p>Chào mừng bạn đến với <strong>Noble Loft Theory</strong> — không gian dành cho những ai yêu thích
+                        cái đẹp và nghệ thuật trang trí nội thất.</p>
+                    <p>Chúng tôi mang đến các sản phẩm decor trang trí nhà với phong cách hiện đại, tối giản nhưng vẫn
+                        giữ được sự tinh tế trong từng chi tiết.</p>
+
+                </div>
+
+                <!-- Cột 2: Liên kết -->
+                <div class="footer-col">
+                    <h3>Liên kết</h3>
+                    <ul>
+                        <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
+                        <ul>
+
+                            <div> </div>
+                            <li>
+                                <p href="#"> Chính sách đổi trả hoàn hàng</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách bảo mật mật khẩu</p>
+                            </li>
+                            <li>
+                                <p href="#"> Hướng dẫn mua hàng, sản phẩm</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách kiểm hàng hóa vận chuyển</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách giao hàng tận nơi</p>
+                            </li>
+                            <li>
+                                <p href="#"> Hướng dẫn thanh toán đơn hàng</p>
+                            </li>
+
+                        </ul>
+                    </ul>
+                </div>
+
+                <!-- Cột 3: Thông tin liên hệ -->
+                <div class="footer-col">
+                    <h3>Thông tin liên hệ</h3>
+                    <p><i class="fa fa-map-marker"></i> Khu phố 6, p.Linh Trung, tp.Thủ Đức</p>
+                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm tp Hồ Chí Minh</p>
+                    <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
+
+                    <p><i class="fa fa-envelope"></i> <a
+                            href="mailto:NLT@noblelofttheory.com">NLT@noblelofttheory.com</a></p>
+                </div>
 
 
+                <!-- Cột 4: Fanpage -->
+                <div class="footer-col">
+                    <h3>Fanpage</h3>
+                    <div class="fanpage-box">
+                        <p>Liên hệ ngay trang chủ của shop Noble Loft Theory.</p>
+                        <p>Nếu bạn đang có thắc mắc gì ở sản phẩm.</p>
+                        <p>Fanpage, Youtube và Instagram.</p>
+
+
+                        <div class="social-box">
+                            <div class="social-icons">
+                                <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>Copyright © 2025 NLT Noble Loft Theory. Powered by NLT </p>
+        </div>
+        </div>
+    </footer>
 
     <script src="js/living.js"></script>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
