--- a/detail.html
+++ b/detail.html
@@ -44,21 +44,21 @@
       <a href="balcony.html" class="">Ban Công</a>
 
       <div class="dropdown">
-        <a href="#">Decor <i class="fa-solid fa-chevron-down"></i></a>
+        <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
-          <a href="#">Cây</a>
-          <a href="#">Hoa</a>
-          <a href="#">Đèn</a>
-          <a href="#">Tượng & Phụ kiện</a>
-          <a href="#">Đồng hồ</a>
-          <a href="#">Tranh</a> 
-          <a href="#">Gương</a>
-          <a href="#">Nến & Tinh dầu</a>
-          <a href="#">Bình & Lọ hoa</a>
-          <a href="#">Chăn & Gối</a>  
-          <a href="#">Kệ & Giá đỡ mini</a>
-          <a href="#">Bàn decor</a>
-          <a href="#">Ghế decor</a>
+          <a href="decor.html">Cây</a>
+          <a href="decor.html">Hoa</a>
+          <a href="decor.html">Đèn</a>
+          <a href="decor.html">Tượng & Phụ kiện</a>
+          <a href="decor.html">Đồng hồ</a>
+          <a href="decor.html">Tranh</a> 
+          <a href="decor.html">Gương</a>
+          <a href="decor.html">Nến & Tinh dầu</a>
+          <a href="decor.html">Bình & Lọ hoa</a>
+          <a href="decor.html">Chăn & Gối</a>  
+          <a href="decor.html">Kệ & Giá đỡ mini</a>
+          <a href="decor.html">Bàn decor</a>
+          <a href="decor.html">Ghế decor</a>
         </div>
       </div>
     </nav>
