--- a/home.html
+++ b/home.html
@@ -14,54 +14,54 @@
 
 <body>
     <header class="header">
-    <div class="header-top">
-      <div class="logo">
-        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
-        <span><a href="index.html">Noble Loft Theory</a></span>
-      </div>
-      <div class="search-box">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Tìm kiếm">
-      </div>
-      <div class="header-right">
-        <a href="login.html">Tra cứu đơn hàng</a>
-        <a href="gioithieu.html">Giới thiệu</a>
-        <a href="contact.html">Liên hệ</a>
-        <div class="icons">
-            <a href="login.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
+        <div class="header-top">
+            <div class="logo">
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+                <span><a href="home.html">Noble Loft Theory</a></span>
+            </div>
+            <div class="search-box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Tìm kiếm">
+            </div>
+            <div class="header-right">
+                <a href="tracking.html">Tra cứu đơn hàng</a>
+                <a href="gioithieu.html">Giới thiệu</a>
+                <a href="contact.html">Liên hệ</a>
+                <div class="icons">
+                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="account.html" class="circle"><i class="fa-solid fa-user"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <nav class="menu">
-      <a href="index.html" class="active">Trang chủ</a>
-      <a href="living.html" class="">Phòng khách</a>
-      <a href="kitchen.html" class="">Phòng bếp</a>
-      <a href="bedroom.html" class="">Phòng ngủ</a>
-      <a href="office.html" class="">Phòng làm việc</a>
-      <a href="balcony.html" class="">Ban Công</a>
+        <nav class="menu">
+            <a href="index.html" class="active">Trang chủ</a>
+            <a href="living.html" class="">Phòng khách</a>
+            <a href="kitchen.html" class="">Phòng bếp</a>
+            <a href="bedroom.html" class="">Phòng ngủ</a>
+            <a href="office.html" class="">Phòng làm việc</a>
+            <a href="balcony.html" class="">Ban Công</a>
 
-      <div class="dropdown">
-        <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
-        <div class="dropdown-content">
-          <a href="decor.html">Cây</a>
-          <a href="decor.html">Hoa</a>
-          <a href="decor.html">Đèn</a>
-          <a href="decor.html">Tượng & Phụ kiện</a>
-          <a href="decor.html">Đồng hồ</a>
-          <a href="decor.html">Tranh</a> 
-          <a href="decor.html">Gương</a>
-          <a href="decor.html">Nến & Tinh dầu</a>
-          <a href="decor.html">Bình & Lọ hoa</a>
-          <a href="decor.html">Chăn & Gối</a>  
-          <a href="decor.html">Kệ & Giá đỡ mini</a>
-          <a href="decor.html">Bàn decor</a>
-          <a href="decor.html">Ghế decor</a>
-        </div>
-      </div>
-    </nav>
-  </header>
+            <div class="dropdown">
+                <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
+                <div class="dropdown-content">
+                    <a href="decor.html">Cây</a>
+                    <a href="decor.html">Hoa</a>
+                    <a href="decor.html">Đèn</a>
+                    <a href="decor.html">Tượng & Phụ kiện</a>
+                    <a href="decor.html">Đồng hồ</a>
+                    <a href="decor.html">Tranh</a>
+                    <a href="decor.html">Gương</a>
+                    <a href="decor.html">Nến & Tinh dầu</a>
+                    <a href="decor.html">Bình & Lọ hoa</a>
+                    <a href="decor.html">Chăn & Gối</a>
+                    <a href="decor.html">Kệ & Giá đỡ mini</a>
+                    <a href="decor.html">Bàn decor</a>
+                    <a href="decor.html">Ghế decor</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
     <main class="container">
