--- a/forgot.html
+++ b/forgot.html
@@ -34,16 +34,10 @@
         }
 
         .form-structor::after {
-            content: '';
-            opacity: .8;
+            content: "";
+            opacity: 0.8;
             position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background-repeat: no-repeat;
-            background-position: left bottom;
-            background-size: 500px;
+            inset: 0;
             background: url("https://i.postimg.cc/ncBkxWWJ/bgr-login.jpg") no-repeat left bottom / 500px;
         }
 
