--- a/bedroom.html
+++ b/bedroom.html
@@ -16,59 +16,59 @@
 <body>
     <!-- === HEADER === -->
     <header class="header">
-        <div class="header-top">
-            <div class="logo">
-                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
-                <span><a href="home.html">Noble Loft Theory</a></span>
-            </div>
-            <div class="search-box">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Tìm kiếm">
-            </div>
-            <div class="header-right">
-                <a href="tracking.html">Tra cứu đơn hàng</a>
-                <a href="gioithieu.html">Giới thiệu</a>
-                <a href="contact.html">Liên hệ</a>
-                <div class="icons">
-                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
-                </div>
-            </div>
+    <div class="header-top">
+      <div class="logo">
+        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+        <span><a href="index.html">Noble Loft Theory</a></span>
+      </div>
+      <div class="search-box">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Tìm kiếm">
+      </div>
+      <div class="header-right">
+        <a href="tracking.html">Tra cứu đơn hàng</a>
+        <a href="gioithieu.html">Giới thiệu</a>
+        <a href="contact.html">Liên hệ</a>
+        <div class="icons">
+            <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
         </div>
+      </div>
+    </div>
 
-        <nav class="menu">
-            <a href="home.html" class="">Trang chủ</a>
-            <a href="living.html" class="">Phòng khách</a>
-            <a href="kitchen.html" class="">Phòng bếp</a>
-            <a href="bedroom.html" class="active">Phòng ngủ</a>
-            <a href="office.html" class="">Phòng làm việc</a>
-            <a href="balcony.html" class="">Ban Công</a>
+    <nav class="menu">
+      <a href="index.html" class="">Trang chủ</a>
+      <a href="living.html" class="">Phòng khách</a>
+      <a href="kitchen.html" class="">Phòng bếp</a>
+      <a href="bedroom.html" class="active">Phòng ngủ</a>
+      <a href="office.html" class="">Phòng làm việc</a>
+      <a href="balcony.html" class="">Ban Công</a>
 
-            <div class="dropdown">
-                <a href="#">Decor <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Cây</a>
-                    <a href="#">Hoa</a>
-                    <a href="#">Đèn</a>
-                    <a href="#">Tượng & Phụ kiện</a>
-                    <a href="#">Đồng hồ</a>
-                    <a href="#">Tranh</a>
-                    <a href="#">Gương</a>
-                    <a href="#">Nến & Tinh dầu</a>
-                    <a href="#">Bình & Lọ hoa</a>
-                    <a href="#">Chăn & Gối</a>
-                    <a href="#">Kệ & Giá đỡ mini</a>
-                    <a href="#">Bàn decor</a>
-                    <a href="#">Ghế decor</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+      <div class="dropdown">
+        <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
+        <div class="dropdown-content">
+          <a href="decor.html">Cây</a>
+          <a href="decor.html">Hoa</a>
+          <a href="decor.html">Đèn</a>
+          <a href="decor.html">Tượng & Phụ kiện</a>
+          <a href="decor.html">Đồng hồ</a>
+          <a href="decor.html">Tranh</a> 
+          <a href="decor.html">Gương</a>
+          <a href="decor.html">Nến & Tinh dầu</a>
+          <a href="decor.html">Bình & Lọ hoa</a>
+          <a href="decor.html">Chăn & Gối</a>  
+          <a href="decor.html">Kệ & Giá đỡ mini</a>
+          <a href="decor.html">Bàn decor</a>
+          <a href="decor.html">Ghế decor</a>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 
     <!-- === BREADCRUMB (ĐƯỜNG DẪN TRANG) === -->
     <nav class="breadcrumb">
-        <a href="home.html">Trang chủ</a> &#47;
+        <a href="index.html">Trang chủ</a> &#47;
         <span class="current">Phòng ngủ</span>
     </nav>
 
