--- a/pay.html
+++ b/pay.html
@@ -179,92 +179,58 @@
 
     <!-- === HEADER === -->
     <header class="header">
-        <div class="header-top">
-            <div class="logo">
-                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
-                <span>Noble Loft Theory</span>
-            </div>
-            <div class="search-box">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Tìm kiếm">
-            </div>
-            <div class="header-right">
-                <a href="tracking.html">Tra cứu đơn hàng</a>
-                <a href="gioithieu.html">Giới thiệu</a>
-                <a href="contact.html">Liên hệ</a>
-                <div class="icons">
-                    <a href="cart.html" class="circle">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </a>
-                    <a href="login.html" class="circle">
-                        <i class="fa-solid fa-user"></i>
-                    </a>
-                </div>
-            </div>
+    <div class="header-top">
+      <div class="logo">
+        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+        <span><a href="index.html">Noble Loft Theory</a></span>
+      </div>
+      <div class="search-box">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Tìm kiếm">
+      </div>
+      <div class="header-right">
+        <a href="tracking.html">Tra cứu đơn hàng</a>
+        <a href="gioithieu.html">Giới thiệu</a>
+        <a href="contact.html">Liên hệ</a>
+        <div class="icons">
+            <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
         </div>
+      </div>
+    </div>
 
-        <nav class="menu">
-            <a href="home.html" class="active">Trang chủ</a>
-            <div class="dropdown">
-                <a href="living.html">Phòng khách <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Sofa</a>
-                    <a href="#">Bàn trà</a>
-                    <a href="#">Kệ tivi</a>
-                    <a href="#">Đèn trang trí</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="kitchen.html">Phòng Bếp <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Bàn ăn</a>
-                    <a href="#">Ghế ăn</a>
-                    <a href="#">Tủ bếp</a>
-                    <a href="#">Đèn bàn</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="bedroom.html">Phòng Ngủ <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Giường ngủ</a>
-                    <a href="#">Tủ quần áo</a>
-                    <a href="#">Bàn trang điểm</a>
-                    <a href="#">Đèn ngủ</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="office.html">Phòng Làm Việc <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#"> Ghế </a>
-                    <a href="#"> Bàn làm việc </a>
-                    <a href="#"> Tủ sách </a>
-                    <a href="#"> Kệ sách </a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="balcony.html">Ban Công <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Ghế ngoài trời</a>
-                    <a href="#">Bàn trà ngoài trời</a>
-                    <a href="#">Chậu cây</a>
-                    <a href="#">Đèn trang trí</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
-                <div class="dropdown-content">
-                    <a href="#">Tranh treo tường</a>
-                    <a href="#">Gương trang trí</a>
-                    <a href="#">Đồ decor bàn</a>
-                    <a href="#">Thảm trải sàn</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <nav class="menu">
+      <a href="index.html" class="menu-item active">Trang chủ</a>
+      <a href="living.html" class="menu-item">Phòng khách</a>
+      <a href="kitchen.html" class="menu-item">Phòng bếp</a>
+      <a href="bedroom.html" class="menu-item">Phòng ngủ</a>
+      <a href="office.html" class="menu-item">Phòng làm việc</a>
+      <a href="balcony.html" class="menu-item">Ban Công</a>
+
+      <div class="dropdown">
+        <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
+        <div class="dropdown-content">
+          <a href="decor.html">Cây</a>
+          <a href="decor.html">Hoa</a>
+          <a href="decor.html">Đèn</a>
+          <a href="decor.html">Tượng & Phụ kiện</a>
+          <a href="decor.html">Đồng hồ</a>
+          <a href="decor.html">Tranh</a> 
+          <a href="decor.html">Gương</a>
+          <a href="decor.html">Nến & Tinh dầu</a>
+          <a href="decor.html">Bình & Lọ hoa</a>
+          <a href="decor.html">Chăn & Gối</a>  
+          <a href="decor.html">Kệ & Giá đỡ mini</a>
+          <a href="decor.html">Bàn decor</a>
+          <a href="decor.html">Ghế decor</a>
+        </div>
+      </div>
+    </nav>
+  </header>
 
     <!-- ===== BREADCRUMB / TIẾN TRÌNH ===== -->
     <div class="breadcrumb">
-        <a href="home.html">Trang chủ</a> &#47;
+        <a href="index.html">Trang chủ</a> &#47;
         <a href="cart.html">Giỏ hàng</a> &#47;
         <span class="current">Thông tin đặt hàng</span>
     </div>
