--- a/balcony.html
+++ b/balcony.html
@@ -16,58 +16,58 @@
 <body>
     <!-- === HEADER === -->
     <header class="header">
-    <div class="header-top">
-      <div class="logo">
-        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
-        <span><a href="index.html">Noble Loft Theory</a></span>
-      </div>
-      <div class="search-box">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Tìm kiếm">
-      </div>
-      <div class="header-right">
-        <a href="tracking.html">Tra cứu đơn hàng</a>
-        <a href="gioithieu.html">Giới thiệu</a>
-        <a href="contact.html">Liên hệ</a>
-        <div class="icons">
-            <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
+        <div class="header-top">
+            <div class="logo">
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+                <span><a href="home.html">Noble Loft Theory</a></span>
+            </div>
+            <div class="search-box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Tìm kiếm">
+            </div>
+            <div class="header-right">
+                <a href="tracking.html">Tra cứu đơn hàng</a>
+                <a href="gioithieu.html">Giới thiệu</a>
+                <a href="contact.html">Liên hệ</a>
+                <div class="icons">
+                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="account.html" class="circle"><i class="fa-solid fa-user"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <nav class="menu">
-      <a href="index.html" class="">Trang chủ</a>
-      <a href="living.html" class="">Phòng khách</a>
-      <a href="kitchen.html" class="">Phòng bếp</a>
-      <a href="bedroom.html" class="">Phòng ngủ</a>
-      <a href="office.html" class="">Phòng làm việc</a>
-      <a href="balcony.html" class="active">Ban Công</a>
+        <nav class="menu">
+            <a href="home.html" class="">Trang chủ</a>
+            <a href="living.html" class="">Phòng khách</a>
+            <a href="kitchen.html" class="">Phòng bếp</a>
+            <a href="bedroom.html" class="">Phòng ngủ</a>
+            <a href="office.html" class="">Phòng làm việc</a>
+            <a href="balcony.html" class="active">Ban Công</a>
 
-      <div class="dropdown">
-        <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
-        <div class="dropdown-content">
-          <a href="decor.html">Cây</a>
-          <a href="decor.html">Hoa</a>
-          <a href="decor.html">Đèn</a>
-          <a href="decor.html">Tượng & Phụ kiện</a>
-          <a href="decor.html">Đồng hồ</a>
-          <a href="decor.html">Tranh</a> 
-          <a href="decor.html">Gương</a>
-          <a href="decor.html">Nến & Tinh dầu</a>
-          <a href="decor.html">Bình & Lọ hoa</a>
-          <a href="decor.html">Chăn & Gối</a>  
-          <a href="decor.html">Kệ & Giá đỡ mini</a>
-          <a href="decor.html">Bàn decor</a>
-          <a href="decor.html">Ghế decor</a>
-        </div>
-      </div>
-    </nav>
-  </header>
+            <div class="dropdown">
+                <a href="decor.html">Decor <i class="fa-solid fa-chevron-down"></i></a>
+                <div class="dropdown-content">
+                    <a href="decor.html">Cây</a>
+                    <a href="decor.html">Hoa</a>
+                    <a href="decor.html">Đèn</a>
+                    <a href="decor.html">Tượng & Phụ kiện</a>
+                    <a href="decor.html">Đồng hồ</a>
+                    <a href="decor.html">Tranh</a>
+                    <a href="decor.html">Gương</a>
+                    <a href="decor.html">Nến & Tinh dầu</a>
+                    <a href="decor.html">Bình & Lọ hoa</a>
+                    <a href="decor.html">Chăn & Gối</a>
+                    <a href="decor.html">Kệ & Giá đỡ mini</a>
+                    <a href="decor.html">Bàn decor</a>
+                    <a href="decor.html">Ghế decor</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <!-- === BREADCRUMB (ĐƯỜNG DẪN TRANG) === -->
     <nav class="breadcrumb">
-        <a href="index.html">Trang chủ</a> &#47;
+        <a href="home.html">Trang chủ</a> &#47;
         <span class="current">Ban công</span>
     </nav>
 
@@ -355,38 +355,21 @@
                 <div class="footer-col">
                     <h3>Liên kết</h3>
                     <ul>
-                        <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                        <ul>
-
-                            <div> </div>
-                            <li>
-                                <p href="#"> Chính sách đổi trả hoàn hàng</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách bảo mật mật khẩu</p>
-                            </li>
-                            <li>
-                                <p href="#"> Hướng dẫn mua hàng, sản phẩm</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách kiểm hàng hóa vận chuyển</p>
-                            </li>
-                            <li>
-                                <p href="#"> Chính sách giao hàng tận nơi</p>
-                            </li>
-                            <li>
-                                <p href="#"> Hướng dẫn thanh toán đơn hàng</p>
-                            </li>
-
-                        </ul>
+                        <li><a>Chính sách đổi trả hoàn hàng</a></li>
+                        <li><a>Chính sách bảo mật mật khẩu</a></li>
+                        <li><a>Hướng dẫn mua hàng, sản phẩm</a></li>
+                        <li><a>Chính sách kiểm hàng hóa vận chuyển</a></li>
+                        <li><a>Chính sách giao hàng tận nơi</a></li>
+                        <li><a>Hướng dẫn thanh toán đơn hàng</a></li>
                     </ul>
+
                 </div>
 
                 <!-- Cột 3: Thông tin liên hệ -->
                 <div class="footer-col">
                     <h3>Thông tin liên hệ</h3>
-                    <p><i class="fa fa-map-marker"></i> Khu phố 6, p.Linh Trung, tp.Thủ Đức</p>
-                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm tp Hồ Chí Minh</p>
+                    <p><i class="fa fa-map-marker"></i>Khu phố 33, P.Linh Xuân, TP.HCM</p>
+                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
                     <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
 
                     <p><i class="fa fa-envelope"></i> <a
@@ -406,9 +389,12 @@
                         <div class="social-box">
                             <div class="social-icons">
                                 <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://www.facebook.com/share/1HP5fZGNqb/?mibextid=wwXIfr">
+                                    <i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/nltnoblelofttheory/">
+                                    <i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/channel/UC931-4vCWPGos5fSNQ8Rh-g">
+                                    <i class="fa-brands fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -421,6 +407,7 @@
         </div>
         </div>
     </footer>
+
     <script src="js/living.js"></script>
     <script src="js/header.js"></script>
 </body>
