--- a/login.html
+++ b/login.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <a href="forgot.html" class="forgot-password">Quên mật khẩu?</a>
-                <a href="index.html" class="submit-btn">Đăng nhập</a>
+                <a href="home.html" class="submit-btn">Đăng nhập</a>
 
                 <p class="switch-text">Chưa có tài khoản?
                     <span id="signup" class="switch-btn">Đăng ký</span>
